chore: sync mirrors

--- a/changelog/2025-02-11.md
+++ b/changelog/2025-02-11.md
@@ -1,6 +1,13 @@
 ## 2025-02-11
 
 * nvim@avante.nvim
+  - [cdacfce90](https://github.com/yetone/avante.nvim/commit/cdacfce90134f02a9e63faaa63736ae05223d1b0) Update Cargo.toml with mlua dependency and features for successful build as per my manual build on an aarch64 proot-distro alias of Debian in an unrooted Termux host. NOTE: This is soon to be my first official OS commit and soon to be my first official pull request. (#898)
+  - [6d116fac3](https://github.com/yetone/avante.nvim/commit/6d116fac36f7e82190c7dcf9a1d0b7199306ace5) feat(file_selector): support customized file selector method (#1204)
+  - [0bfbd39eb](https://github.com/yetone/avante.nvim/commit/0bfbd39ebc1815eecc1b9b6ac062dd3278609dc3) fix(sidebar): fix various focus errors (#1237)
+  - [62c29b3d0](https://github.com/yetone/avante.nvim/commit/62c29b3d0c313d61d08da45c73c59c8ebf242027) fix: incorrect replace end tag (#1240)
+  - [3f8b6d07b](https://github.com/yetone/avante.nvim/commit/3f8b6d07ba086fa6a2aa6832d73933b934b92ee0) feat(sidebar): add member function to check whether the sidebar is focused (#1216)
+  - [a6ae8ad4b](https://github.com/yetone/avante.nvim/commit/a6ae8ad4b7fb142759820a57b08bc49087e2da38) fix(sidebar): reset cursor to beginning of prompt on submit (#1213)
+  - [8d82abe04](https://github.com/yetone/avante.nvim/commit/8d82abe04358515d4bc8385acc6c5847befb717e) feat: expose whether the llm is currently generating content (#1181)
   - [63136fd92](https://github.com/yetone/avante.nvim/commit/63136fd92f2f2e9cf91b231dc19ac2c95e3897ed) fix(suggestions): make history more faithful to future input (#1210)
   - [cc4638613](https://github.com/yetone/avante.nvim/commit/cc463861300c593f3ff45ddcf26cbdc4ba791881) fix: when dev icons absent (#1214)
   - [6e18616c1](https://github.com/yetone/avante.nvim/commit/6e18616c1606a8372164bee844129e3666f8947c) fix: dual boost only in planning mode (#1215)
