chore: sync SchemeStore.nvim

--- a/changelog/2025-02-24.md
+++ b/changelog/2025-02-24.md
@@ -95,6 +95,9 @@
   - [4c4035799](https://github.com/lewis6991/gitsigns.nvim/commit/4c40357994f386e72be92a46f41fc1664c84c87d) chore: fix #1223
   - [22a0b8edb](https://github.com/lewis6991/gitsigns.nvim/commit/22a0b8edba77759401be6d3b05f8228e49dc7353) chore: fix type errors found by emmylua_ls
 
+* nvim@lazy.nvim
+  - [a8c6db5da](https://github.com/folke/lazy.nvim/commit/a8c6db5da7bd382094606340eed015d14fbb5654) style(types): add optional return value for `LazyKeysSpec` rhs (#1924)
+
 * nvim@neo-tree.nvim
   - [94c8ec36d](https://github.com/nvim-neo-tree/neo-tree.nvim/commit/94c8ec36da52af0ea0128012e12abe05c26ef840) fix(defaults): change delete bind in buffers to buffer_delete (#1696)
 
@@ -114,6 +117,7 @@
   - [333bae3d4](https://github.com/neovim/nvim-lspconfig/commit/333bae3d4c4f898699e96f488e43057f55bc5ea2) feat: turbo-language-server (#3620)
 
 * nvim@nvim-treesitter
+  - [e6d02ec9e](https://github.com/nvim-treesitter/nvim-treesitter/commit/e6d02ec9efd396d294a7793f2066e2527b07b03a) bot(lockfile): update nu, rst, swift
   - [f2bd62c65](https://github.com/nvim-treesitter/nvim-treesitter/commit/f2bd62c6568de54ca1b8fb0a8de04a41442934cb) bot(lockfile): update nu, vhdl
   - [c08aa2fe3](https://github.com/nvim-treesitter/nvim-treesitter/commit/c08aa2fe3f5d99deff82087233a4dac6cd1e202a) ci(update): block devicetree (ABI 15)
   - [5774e7d3d](https://github.com/nvim-treesitter/nvim-treesitter/commit/5774e7d3da4f681296a87fcd85d17779ad362a4f) bot(lockfile): update enforce, liquid, mlir, nix, nu
