--- a/changelog/2025-02-25.md
+++ b/changelog/2025-02-25.md
@@ -1,6 +1,11 @@
 ## 2025-02-25
 
 * nvim@avante.nvim
+  - [901e1caa9](https://github.com/yetone/avante.nvim/commit/901e1caa918be0b9620b09466fb2ffa8c57e1de9) feat: run_command is run asynchronously (#1377)
+  - [aa0449dbc](https://github.com/yetone/avante.nvim/commit/aa0449dbc19c5c312818f4a004c66b1615eab18b) fix: python tool message formatting and check for docker (#1379)
+  - [afa674c6f](https://github.com/yetone/avante.nvim/commit/afa674c6fd451c65e3ca72b6bbd900d9fcb2704a) chore: prefer not to use function assignment (#1381)
+  - [a1d169740](https://github.com/yetone/avante.nvim/commit/a1d16974007ede1d4aaf4618de3de7ba3cd19d3f) feat: parse excel (#1383)
+  - [8d888c286](https://github.com/yetone/avante.nvim/commit/8d888c286131d0f201d59bf0131de1146b47a6d7) feat: support claude-3.7-sonnet reasoning (#1382)
   - [02b4fbf4b](https://github.com/yetone/avante.nvim/commit/02b4fbf4b181fae0f088b2049f44171b07a9d80b) feat: support claude 3.7 (#1376)
   - [c9134eb8e](https://github.com/yetone/avante.nvim/commit/c9134eb8ed4010d9cd4aec189ce92de7823d1959) feat: add debug method for cursor applying (#1375)
   - [876246b9a](https://github.com/yetone/avante.nvim/commit/876246b9ae9acc83318e21e0b05ba90937cf71c6) fix: the enabled function of the llm tool was not called (#1374)
@@ -16,6 +21,7 @@
   - [379cf26e9](https://github.com/mfussenegger/nvim-dap/commit/379cf26e9c457b66a0152cd5d018418c03720d47) Add DapPause user command
 
 * nvim@render-markdown.nvim
+  - [43a971e7d](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/43a971e7da82e5622797b36450424ebd66cc9046) feat: latex position below
   - [0df6719ab](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/0df6719abc3b547bc5b7111a750d8d7e035a7234) feat: change_events list & link.wiki.body function
 
 * nvim@schema-store.nvim
