chore: sync mirrors

--- a/changelog/2025-02-25.md
+++ b/changelog/2025-02-25.md
@@ -1,6 +1,8 @@
 ## 2025-02-25
 
 * nvim@avante.nvim
+  - [481a44f04](https://github.com/yetone/avante.nvim/commit/481a44f041954753e9bd544587c250d7b73ee48e) fix: cursor applying diff (#1387)
+  - [e7ffb7649](https://github.com/yetone/avante.nvim/commit/e7ffb7649928756cde8de042edbce638e4572070) fix: reuse parse_messages and remove parse_response_data and have a good function name for check env exists (#1386)
   - [901e1caa9](https://github.com/yetone/avante.nvim/commit/901e1caa918be0b9620b09466fb2ffa8c57e1de9) feat: run_command is run asynchronously (#1377)
   - [aa0449dbc](https://github.com/yetone/avante.nvim/commit/aa0449dbc19c5c312818f4a004c66b1615eab18b) fix: python tool message formatting and check for docker (#1379)
   - [afa674c6f](https://github.com/yetone/avante.nvim/commit/afa674c6fd451c65e3ca72b6bbd900d9fcb2704a) chore: prefer not to use function assignment (#1381)
