chore: sync mirrors

--- a/changelog/2025-03-07.md
+++ b/changelog/2025-03-07.md
@@ -5,6 +5,15 @@
   - [fdf9e2e0b](https://github.com/stevearc/aerial.nvim/commit/fdf9e2e0b9d5e5a0b7861d76ef7cb0a28d345f9b) feat: add treesitter support for R (#450)
 
 * nvim@avante.nvim
+  - [6c7c5464c](https://github.com/yetone/avante.nvim/commit/6c7c5464ca0327a9acd022c9c02cec8bae64a073) feat: cwd ad project root (#1517)
+  - [dbe31a866](https://github.com/yetone/avante.nvim/commit/dbe31a866a4a2fa30f520b3d94865e2ffab4cd86) Fix attempt to call field 'is_o_series_model' in Copilot provider (#1514)
+  - [11305eaac](https://github.com/yetone/avante.nvim/commit/11305eaacd6f57cc19caab67f75e5c3d6d4958e6) fix: bedrock (#1516)
+  - [a13e5dca1](https://github.com/yetone/avante.nvim/commit/a13e5dca1d631b5e0ccafad9e35bb342a888729c) fix: remove resource schema (#1512)
+  - [25dee44de](https://github.com/yetone/avante.nvim/commit/25dee44de934029239f3ce76f6c22af952ed184d) fix: bedrock (#1511)
+  - [8620ea3e1](https://github.com/yetone/avante.nvim/commit/8620ea3e12cfdb90aef2e8ce6f7d5e864758ab71) refactor: summarize memory (#1508)
+  - [2b0e7e09a](https://github.com/yetone/avante.nvim/commit/2b0e7e09aedacb19955485cdf6a30138c09bcbd1) fix: ignore git crypt files (#1465)
+  - [dec794ac8](https://github.com/yetone/avante.nvim/commit/dec794ac856baf3bad9f6820c1cc0632717ad0c8) fix: contradictory lazy.nvim installation spec (#1506)
+  - [5aa55689f](https://github.com/yetone/avante.nvim/commit/5aa55689fffd8b99751af8571701fe0dea76e793) fix: bedrock claude do not support prompt caching (#1507)
   - [a13e5dca1](https://github.com/yetone/avante.nvim/commit/a13e5dca1d631b5e0ccafad9e35bb342a888729c) fix: remove resource schema (#1512)
   - [25dee44de](https://github.com/yetone/avante.nvim/commit/25dee44de934029239f3ce76f6c22af952ed184d) fix: bedrock (#1511)
   - [8620ea3e1](https://github.com/yetone/avante.nvim/commit/8620ea3e12cfdb90aef2e8ce6f7d5e864758ab71) refactor: summarize memory (#1508)
@@ -13,6 +22,10 @@
   - [5aa55689f](https://github.com/yetone/avante.nvim/commit/5aa55689fffd8b99751af8571701fe0dea76e793) fix: bedrock claude do not support prompt caching (#1507)
 
 * nvim@copilot-chat.nvim
+  - [c85b11db4](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/c85b11db405a8e07999bb95dd7c5724707aabda8) chore(doc): auto generate docs
+  - [eb3a7986c](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/eb3a7986c4f03be37e947fd241fab0fdd0d6600b) refactor(prompts): use proper fields for prompt settings
+  - [8ce5c96aa](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/8ce5c96aa0c6aa939d55998e88c9e1aebc9d852d) chore(doc): auto generate docs
+  - [4e23f171a](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/4e23f171afd0667860537ae29d3708678114fd45) feat: add conversation memory summarization
   - [d826c1827](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/d826c1827179cde461256d9ce0fb3098bc00e332) chore(doc): auto generate docs
   - [78a3b588d](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/78a3b588d632471af6a3a6986bdb8e6f1267600a) docs: add missing system context to README
   - [4759cfc2d](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/4759cfc2dc373ebe1adb79e3fd7132c1beb6bfd7) fix: reset diagnostics when stopping Copilot Chat
@@ -32,9 +45,13 @@
   - [13fbbcbe8](https://github.com/MunifTanjim/nui.nvim/commit/13fbbcbe815c3bbbb8c5977a12cfb0b9318deaf8) ci: pin ubuntu-22.04 for github actions
 
 * nvim@nvim-treesitter
+  - [71ac531a6](https://github.com/nvim-treesitter/nvim-treesitter/commit/71ac531a6301b6d5f4dc4d7157ffd8bd8d6d769e) bot(lockfile): update gleam, rust
   - [f22181a62](https://github.com/nvim-treesitter/nvim-treesitter/commit/f22181a62c47bf591fbfd6ada7d9a1156278d6e0) feat(gleam):  "echo" keyword (#7710)
   - [16e8e1977](https://github.com/nvim-treesitter/nvim-treesitter/commit/16e8e197717cc6a89d7bea46d5e3cde954f1500e) feat(snakemake): add rules to locals (#7698)
   - [794cf2f63](https://github.com/nvim-treesitter/nvim-treesitter/commit/794cf2f6309691d4e9d3945ae33943a3d90ddd84) bot(lockfile): update angular, meson, mlir, rust, scala, unison
 
 * nvim@schema-store.nvim
   - [171c54b58](https://github.com/b0o/SchemaStore.nvim/commit/171c54b58076c7454c40da4dfba1aab21171c143) Update SchemaStore catalog
+
+* nvim@smear-cursor.nvim
+  - [4f91b4377](https://github.com/sphamba/smear-cursor.nvim/commit/4f91b437757c3f8648be978602c079e7c718c807) feat: add toggles for smear directions
