--- a/changelog/2025-03-08.md
+++ b/changelog/2025-03-08.md
@@ -1,10 +1,14 @@
 ## 2025-03-08
 
 * nvim@avante.nvim
+  - [4766e76a3](https://github.com/yetone/avante.nvim/commit/4766e76a3113bbdcdaf55d33b69ea483066c8ad0) feat: add key mappings to close sidebar in input_container (#1494)
+  - [8344d3ee3](https://github.com/yetone/avante.nvim/commit/8344d3ee3d8daf93c924d1592bedb71d934b0d5d) feat: support customizing system_prompt in the configuration (#1527)
   - [d75094b81](https://github.com/yetone/avante.nvim/commit/d75094b81579e2b36dc8fa9fc21bd499dea37590) fix: bedrock (#1524)
   - [4d983532a](https://github.com/yetone/avante.nvim/commit/4d983532a13f11e7a497e9d305af677037ffa453) fix: more readable value name (#1521)
 
 * nvim@copilot-chat.nvim
+  - [1f91783fd](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/1f91783fdf7dcea25c04dffc8e856ccb7a2db13f) fix: update reference handling in selection messages
+  - [062e5444e](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/062e5444ef0b13c22f815cb4d371d924e1ea64f6) refactor(memory): improve conversation memory management
   - [78595bb61](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/78595bb6153dd835c1bfd797de6ab073c093d4ad) chore(doc): auto generate docs
   - [e33c777cd](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/e33c777cd3dbf3d4fcc9ce2faae6ececd95f4e8f) fix: improve history updates safety
   - [7ba905eef](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/7ba905eefb9f42ac7de20607b29f54b922750de8) feat: send diagnostics with buffer context as well
@@ -17,6 +21,9 @@
 * nvim@nvim-lspconfig
   - [fd26f8626](https://github.com/neovim/nvim-lspconfig/commit/fd26f8626c03b424f7140d454031d1dcb8d23513) docs: update configs.md skip-checks: true
   - [69d2876c0](https://github.com/neovim/nvim-lspconfig/commit/69d2876c0d40e8714b3a56a02eb16fab3409e960) feat: systemd-language-server #3514
+
+* nvim@nvim-treesitter
+  - [ee8e149a4](https://github.com/nvim-treesitter/nvim-treesitter/commit/ee8e149a4ff75ebd5f1b065831746ddaf0e480ec) bot(lockfile): update ocaml, ocaml_interface
 
 * nvim@nvim-treesitter-textobjects
   - [143856b1c](https://github.com/nvim-treesitter/nvim-treesitter-textobjects/commit/143856b1cee509a190cc8c17ddb0638002171235) docs: update queries in README (#740)
