--- a/changelog/2025-03-15.md
+++ b/changelog/2025-03-15.md
@@ -27,16 +27,21 @@
   - [b0893fff5](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/b0893fff5f2d3b22155f3113381a614fd4f65a8a) feat: expose source buffer API and support disabling mappings
 
 * nvim@neo-tree.nvim
+  - [d9544c74e](https://github.com/nvim-neo-tree/neo-tree.nvim/commit/d9544c74ec43cca0564fdc334c116fbe0be8a807) refactor(events): define autocmd events using lua (#1727)
   - [9b5d67119](https://github.com/nvim-neo-tree/neo-tree.nvim/commit/9b5d67119c46e3262ffe1508fe6d8540b79ad75d) fix(manager): ensure setup before creating state (#1729)
 
 * nvim@nvim-cmp
   - [1e1900b07](https://github.com/hrsh7th/nvim-cmp/commit/1e1900b0769324a9675ef85b38f99cca29e203b3) Preserve 'buflisted' state when applying LSP text edits (#2141)
 
 * nvim@nvim-treesitter
+  - [2586ea65f](https://github.com/nvim-treesitter/nvim-treesitter/commit/2586ea65faf45dcf1caf8d34510d50bb545c215a) bot(lockfile): update swift
   - [8b79cddc7](https://github.com/nvim-treesitter/nvim-treesitter/commit/8b79cddc708cb8549562f0101f7f509ad7cebf97) bot(lockfile): update gitcommit, tiger, typoscript
 
 * nvim@nvim-treesitter-context
   - [129fcc94f](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/129fcc94fa986692926366e940a46f00d2a4abbe) feat(proto): add context for oneof (#564)
+
+* nvim@render-markdown.nvim
+  - [08e1fa4e2](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/08e1fa4e281e48ee4aa892428de9fb91e66edca6) chore(tests): more unit test updates
 
 * nvim@schema-store.nvim
   - [56d8ed0fa](https://github.com/b0o/SchemaStore.nvim/commit/56d8ed0fa1516242085ba5e95d7f49fad50d5754) Update SchemaStore catalog
