chore: sync mirrors

--- a/changelog/2025-03-16.md
+++ b/changelog/2025-03-16.md
@@ -1,6 +1,9 @@
 ## 2025-03-16
 
 * nvim@copilot-chat.nvim
+  - [173a6a869](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/173a6a869bd14748209c948f4a3f2e8fbb0cccee) fix: handle treesitter parsing in fast events
+  - [7e24124b8](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/7e24124b897433d28ee8114bd496d96cd3477b65) refactor: remove unused similarity threshold parameters
+  - [3e992785c](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/3e992785cba52a0038a3861ffc7b63d7e9335572) feat(context): improve similarity ranking algorithms
   - [3226bc408](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/3226bc40816c07ba30cd4069a11aebb7fba40dab) chore(doc): auto generate docs
   - [d73df1ea9](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/d73df1ea9f710fece167226ca4a286ab10607f65) docs: remove # prefix from context provider examples
   - [1a6144280](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/1a61442807bc23ae64c5dd8d44d0937f8e603e42) chore(doc): auto generate docs
@@ -23,4 +26,12 @@
   - [a489769f6](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/a489769f6943f51c081126ae7f5e5bce6be4dc4e) feat(chat): add streaming callback support
 
 * nvim@nvim-treesitter
+  - [845356a25](https://github.com/nvim-treesitter/nvim-treesitter/commit/845356a256ed6ff5868da582cb62a31d762e1804) bot(lockfile): update dtd, xml, ziggy, ziggy_schema
   - [99ea6c5d4](https://github.com/nvim-treesitter/nvim-treesitter/commit/99ea6c5d4389a3278769eb6abb7b3ebefb7d9f2a) feat(typst): highlight language name as @label
+
+* nvim@nvim-treesitter-context
+  - [572e534c9](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/572e534c9f881bb9bf9f388e4c87f360446c72d4) Merge pull request #565 from PeterCardenas/support-tests-with-different-names
+  - [4bc8f1d97](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/4bc8f1d971a4940c87fb83a154011a799d4fd733) feat(starlark): add support
+  - [e2daf50e0](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/e2daf50e026235623d2e8284d75f988bcbc9d018) test: support tests with different extensions than the lang name
+  - [0728221c7](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/0728221c7ef2361c641c325598b9a9661fc1e2cc) chore: fix lang order in readme
+  - [d5de09e7c](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/d5de09e7cedea0188d5c14a98e3fc85091af971c) chore: lua_ls picks up nvim-test
