chore: sync mirrors

--- a/changelog/2025-03-17.md
+++ b/changelog/2025-03-17.md
@@ -1,6 +1,10 @@
 ## 2025-03-17
 
 * nvim@avante.nvim
+  - [bf61e3c7e](https://github.com/yetone/avante.nvim/commit/bf61e3c7e33ef3f19cb0115f5dcee3da9ae4e773) fix: correct button rendering for multi-line messages in confirmation dialog
+  - [3dd5bed48](https://github.com/yetone/avante.nvim/commit/3dd5bed48fa315df9a2ba1d064dc5182452e8e1c) feat(ui): add support for multi-line messages in confirm dialog
+  - [aaf400a41](https://github.com/yetone/avante.nvim/commit/aaf400a4111c297259212f98d88fb4187caf214b) fix: parse empty code block in markdown (#1612)
+  - [e204ca1cf](https://github.com/yetone/avante.nvim/commit/e204ca1cf3bb1f44828c0ae6982833ff8457ce9e) feat: support tools in bedrock (#1598)
   - [3504e6440](https://github.com/yetone/avante.nvim/commit/3504e64407e3c7816e9b539f0f0fa181889d751a) fix: empty message content (#1611)
   - [eb5a2f6cc](https://github.com/yetone/avante.nvim/commit/eb5a2f6cca547e5a7a29121dff1cf2d730c627aa) fix: missing tool use (#1610)
   - [63605a55a](https://github.com/yetone/avante.nvim/commit/63605a55a3fa7f36bdc55b01aa4be20ec73ad801) fix: increase history max_tokens (#1609)
@@ -26,7 +30,11 @@
   - [ab3a2a0d9](https://github.com/neovim/nvim-lspconfig/commit/ab3a2a0d9da740bd0bc286eda2e0c85b39f7f725) chore(qml_lsp)!: remove config
 
 * nvim@nvim-treesitter
+  - [d76a8b6e1](https://github.com/nvim-treesitter/nvim-treesitter/commit/d76a8b6e1b67fd3bcffec4a5d45fd9dee4dbbee8) bot(lockfile): update commonlisp, cuda, glsl, superhtml, ziggy, ziggy_schema
   - [da88ea477](https://github.com/nvim-treesitter/nvim-treesitter/commit/da88ea477c67c7f7ebab6d1e662d0cdebfcb57f0) fix(vhdl): capture "|" as `@operator` (#7744)
+
+* nvim@nvim-treesitter-context
+  - [83ded3bbf](https://github.com/nvim-treesitter/nvim-treesitter-context/commit/83ded3bbff8bc13abc9704bf1c5e426f3ba343c4) test: map treesitter lang to test file
 
 * nvim@nvim-treesitter-textobjects
   - [9937e5e35](https://github.com/nvim-treesitter/nvim-treesitter-textobjects/commit/9937e5e356e5b227ec56d83d0a9d0a0f6bc9cad4) fix: typo `vim.api.util` to `vim.lsp.util` (#742)
