chore: sync mirrors

--- a/changelog/2025-03-18.md
+++ b/changelog/2025-03-18.md
@@ -1,11 +1,15 @@
 ## 2025-03-18
 
 * nvim@avante.nvim
+  - [6fc4f16a4](https://github.com/yetone/avante.nvim/commit/6fc4f16a4eea452f9e0224d08943ec7a98f2779e) fix: normalize CRLF to LF in read_file_from_buf_or_disk (#1622)
+  - [4384a8ddc](https://github.com/yetone/avante.nvim/commit/4384a8ddca37d548dff8d58c1ed5f61f824b548a) fix: use new treesitter syntax for cursor planning (#1623)
   - [540cc53f0](https://github.com/yetone/avante.nvim/commit/540cc53f0c30214e3e4b5688f030bb2d8277b8ce) fix: valid codeblock (#1616)
   - [3b8654948](https://github.com/yetone/avante.nvim/commit/3b86549485d10c67817b4e7e1976460c791525eb) Add extra headers for OpenAI (#1615)
   - [f761e8303](https://github.com/yetone/avante.nvim/commit/f761e83033547d840fe82dbab678c6636a84f49d) fix: update displayed response for the first chunk (#1594)
 
 * nvim@copilot-chat.nvim
+  - [679441e48](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/679441e4809019b7bf2bbcd0e352b75dc9508b92) chore(doc): auto generate docs
+  - [a97b85c69](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/a97b85c69860c9d30f54f96077fab79bb461b0c8) refactor: remove conversation summary feature (#1030)
   - [62b1249aa](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/62b1249aa4a4fc7afe11c7e647cba0cef743826f) chore(doc): auto generate docs
   - [fb64c6573](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/fb64c65734aa703f86ba76d2a578e03567c648d7) fix: improve headless mode handling in callbacks (#1027)
 
