chore: sync mirrors

--- a/changelog/2025-03-25.md
+++ b/changelog/2025-03-25.md
@@ -1,6 +1,11 @@
 ## 2025-03-25
 
 * nvim@avante.nvim
+  - [8c4244b94](https://github.com/yetone/avante.nvim/commit/8c4244b940e89dc42acc7b3b6b801f1767cf6665) fix: decrease history max tokens (#1709)
+  - [6443f1dc5](https://github.com/yetone/avante.nvim/commit/6443f1dc5e8eda21ae9f1fa20978cbf987be1d75) feat: more robust sse content regex (#1707)
+  - [f84cb2896](https://github.com/yetone/avante.nvim/commit/f84cb2896df4850550a336018d62dc6520eb85e8) fix: prohibit repeated reading of the file (#1708)
+  - [976fb4177](https://github.com/yetone/avante.nvim/commit/976fb4177cacf96f5b751ac4ea46aafcdea07551) fix: refine tools (#1706)
+  - [3a75b7d36](https://github.com/yetone/avante.nvim/commit/3a75b7d36f9f2b3e0a4b72bd25c861f08b7d3287) refactor: utilize `Utils.get_hl` to minimize duplicate code (#1701)
   - [25e9b1c11](https://github.com/yetone/avante.nvim/commit/25e9b1c1114a3b25940051c276747a53cf84d3d5) fix: copilot's openai tool description cannot use long text (#1700)
   - [e20a3ff11](https://github.com/yetone/avante.nvim/commit/e20a3ff1116189576780eba20294c0fb57700358) fix(diagnostics): add vim.diagnostic.severity.INFO to diagnostics context (#1696)
   - [5e0cc3921](https://github.com/yetone/avante.nvim/commit/5e0cc3921031b25e5ba724b6496458eebf425aa7) fix: special handling wehn vim diff count_a is 0 (#1698)
@@ -23,6 +28,9 @@
   - [e329e94a6](https://github.com/nvim-treesitter/nvim-treesitter/commit/e329e94a6a0a5ccf6ec8bfec1d10faf5eaae665f) bot(lockfile): update javadoc, problog, prolog
 
 * nvim@render-markdown.nvim
+  - [c21693fb6](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/c21693fb68ebc5bcba9d73d9f81146007d025586) chore: remove usage of Str.pad_to method
+  - [7bf951b8a](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/7bf951b8ad93d47b90be290be6fc60da5788ddaa) fix: allow sign when both language_icon & language_name are false
+  - [8ee2701a6](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/8ee2701a6c4cdaef7ea0b27c13c26971ae3c9761) feat: allow language icon to be disabled while still showing language name
   - [f9badfb59](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/f9badfb5907a16c8e0d5f3c157d63bcea2aa555e) feat: avoid inline text for checkboxes when possible
   - [5cec1bb5f](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/5cec1bb5fb11079a88fd5b3abd9c94867aec5945) feat: improve advice in health check
 
