chore: sync mirrors

--- a/changelog/2025-03-25.md
+++ b/changelog/2025-03-25.md
@@ -1,6 +1,7 @@
 ## 2025-03-25
 
 * nvim@avante.nvim
+  - [a2aec079c](https://github.com/yetone/avante.nvim/commit/a2aec079c9e430200d687a8f4284afc1db33a497) feat: extract str_replace tool (#1710)
   - [8c4244b94](https://github.com/yetone/avante.nvim/commit/8c4244b940e89dc42acc7b3b6b801f1767cf6665) fix: decrease history max tokens (#1709)
   - [6443f1dc5](https://github.com/yetone/avante.nvim/commit/6443f1dc5e8eda21ae9f1fa20978cbf987be1d75) feat: more robust sse content regex (#1707)
   - [f84cb2896](https://github.com/yetone/avante.nvim/commit/f84cb2896df4850550a336018d62dc6520eb85e8) fix: prohibit repeated reading of the file (#1708)
@@ -24,10 +25,14 @@
   - [f62473892](https://github.com/echasnovski/mini.pairs/commit/f624738924cdc9d161629cfa26f6722226b87787) refactor(pairs): use map instead of array to store registered pairs info
   - [4ca8848ce](https://github.com/echasnovski/mini.pairs/commit/4ca8848ced56f54f2376a2daa0788995f16c65ea) refactor(pairs): perform overall code optimization
 
+* nvim@nvim-lspconfig
+  - [200280dab](https://github.com/neovim/nvim-lspconfig/commit/200280dab91a7df2ca42fd2ab3cb4c5fab056666) fix(biome): improved biomejs detection (#3650)
+
 * nvim@nvim-treesitter
   - [e329e94a6](https://github.com/nvim-treesitter/nvim-treesitter/commit/e329e94a6a0a5ccf6ec8bfec1d10faf5eaae665f) bot(lockfile): update javadoc, problog, prolog
 
 * nvim@render-markdown.nvim
+  - [00cace9e5](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/00cace9e585417d360f3889f847fc962043b4930) chore(refactor): replace util module with env module
   - [c21693fb6](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/c21693fb68ebc5bcba9d73d9f81146007d025586) chore: remove usage of Str.pad_to method
   - [7bf951b8a](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/7bf951b8ad93d47b90be290be6fc60da5788ddaa) fix: allow sign when both language_icon & language_name are false
   - [8ee2701a6](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/8ee2701a6c4cdaef7ea0b27c13c26971ae3c9761) feat: allow language icon to be disabled while still showing language name
