chore: sync mirrors

--- a/changelog/2025-03-26.md
+++ b/changelog/2025-03-26.md
@@ -1,6 +1,15 @@
 ## 2025-03-26
 
 * nvim@avante.nvim
+  - [0b4a493d6](https://github.com/yetone/avante.nvim/commit/0b4a493d60da6381678bd6f325c763d9fa0c8ae1) improve: support to customize the keymaps for cancelling the editing (#1730)
+  - [2d4ea5d5d](https://github.com/yetone/avante.nvim/commit/2d4ea5d5d659ee1d19d1d3fdc8fb2498d1388d4a) fix(history_selector): the item.title could exist lineending, which will cause the vim.ui.select crash (#1733)
+  - [6430d61f0](https://github.com/yetone/avante.nvim/commit/6430d61f0a1a29374289008252a43add57b1f3a5) fix: parent dir not exists when write a file (#1732)
+  - [31f951991](https://github.com/yetone/avante.nvim/commit/31f9519912c3cdacb0c6fdd525b2ce806a16400b) fix: summarize memory failed (#1731)
+  - [b41556ee2](https://github.com/yetone/avante.nvim/commit/b41556ee217fea5d473a3e7afc5bce9b6cfd6a85) feat: extract text editor tools (#1726)
+  - [0e69891bd](https://github.com/yetone/avante.nvim/commit/0e69891bdcfa7a2bf94ad7f4c085c14c0a692410) chores: change business sponsor logo (#1727)
+  - [340d298c4](https://github.com/yetone/avante.nvim/commit/340d298c47c972a554ada7e223f0bee793fc626e) fix: dispatch agent (#1725)
+  - [fc3e90ce3](https://github.com/yetone/avante.nvim/commit/fc3e90ce3be1292c349b49bd0d82da44781bf80b) feat: business sponsors (#1724)
+  - [4c2dd777d](https://github.com/yetone/avante.nvim/commit/4c2dd777d62cebce6f29fc81b30e92ef290451ff) fix: copilot tool description cannot use long text (#1722)
   - [39787969c](https://github.com/yetone/avante.nvim/commit/39787969c769204861f1339e52ffcdd00e648220) fix: memory (#1718)
   - [d82eb8534](https://github.com/yetone/avante.nvim/commit/d82eb8534e227a2b8cb119c3bb325ab72423d699) fix: prompts (#1715)
 
@@ -9,7 +18,15 @@
   - [9ce16d41b](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/9ce16d41b2ca16811d784cd080d4daf793a02d16) feat: use model name and versioning for model selection (#1055)
 
 * nvim@copilot.lua
+  - [b9300fbd5](https://github.com/zbirenbaum/copilot.lua/commit/b9300fbd5eeeae294eb76ba6c35c44fbd8b71c1b) fix: incorrect buffer attach logic
   - [99654fe9a](https://github.com/zbirenbaum/copilot.lua/commit/99654fe9ad6cb2500c66b178a03326f75c95f176) feat: add a default should_attach function that includes the buffer logic
+
+* nvim@nvim-lspconfig
+  - [b05812445](https://github.com/neovim/nvim-lspconfig/commit/b05812445486100bcbc99d6430233ea02cfddaf3) docs: update configs.md skip-checks: true
+  - [b542bd594](https://github.com/neovim/nvim-lspconfig/commit/b542bd594a8b9ab76926721e9815ec4b0b1b3c16) fix: golangci-lint v2 json output #3661
+
+* nvim@nvim-treesitter
+  - [85168f158](https://github.com/nvim-treesitter/nvim-treesitter/commit/85168f15808d89b0222313652b9d2777eda3cb08) bot(lockfile): update angular, koto, scala
 
 * nvim@render-markdown.nvim
   - [84d413b0c](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/84d413b0c432adaeaf3dcaac646638bd99d06aa6) feat: completion filter for callouts and checkboxes
