chore: sync mirrors

--- a/changelog/2025-03-27.md
+++ b/changelog/2025-03-27.md
@@ -8,6 +8,7 @@
   - [2e7544f86](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/2e7544f86127daa356d55e4a802bcb29fa63d470) fix: filter out paygo models from Copilot Chat (#1059)
 
 * nvim@copilot.lua
+  - [0da7ebc11](https://github.com/zbirenbaum/copilot.lua/commit/0da7ebc11bf63fe0591f664430266dfc87d77dbf) fix: attempt to resolve a "cookies must be enabled" error
   - [0e3585bb9](https://github.com/zbirenbaum/copilot.lua/commit/0e3585bb9d482336aeb43811e9d7cd09e33edada) feat: add ability to set custom copilot binary
   - [73dbc0e4e](https://github.com/zbirenbaum/copilot.lua/commit/73dbc0e4ef8ab551dfc021ae1b3943af5ffb635f) refactor: remove deprecated setEditorInfo API calls and follow new SDK (#406)
   - [af155845b](https://github.com/zbirenbaum/copilot.lua/commit/af155845b901a1f126705a8af9682bd2be9e1fcc) feat: move to the official Copilot LSP binaries (#384)
@@ -17,11 +18,15 @@
   - [93b804011](https://github.com/mfussenegger/nvim-lint/commit/93b8040115c9114dac1047311763bef275e752dc) Add support for twig-cs-fixer (#758)
 
 * nvim@nvim-lspconfig
+  - [e6c518191](https://github.com/neovim/nvim-lspconfig/commit/e6c518191af238c9245eba93159a3a15f043dc91) docs: update configs.md skip-checks: true
+  - [8350b8cde](https://github.com/neovim/nvim-lspconfig/commit/8350b8cdef977ac8ff399d1db422431191ab405f) feat: vectorcode-server (#3660)
   - [401e50fae](https://github.com/neovim/nvim-lspconfig/commit/401e50fae626c4707af12114b5ddb7bb9f4236a4) feat: alias :LspInfo to `:checkhealth vim.lsp` #3663
   - [e79193005](https://github.com/neovim/nvim-lspconfig/commit/e79193005821543b5b337b9d0350b9fe1ce5c92e) docs: update configs.md skip-checks: true
   - [ec99b4b3f](https://github.com/neovim/nvim-lspconfig/commit/ec99b4b3f5dc45bd1d98f00a50fe71f6126fe89c) fix(golangci-lint): typo in command argument #3662
 
 * nvim@render-markdown.nvim
+  - [c91fa46fc](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/c91fa46fc8d79f5577beac70a459f30ec17a60c2) feat: use builtin extends query in vim.treesitter.query.set for injections
+  - [35119c161](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/35119c1614ec41f9b02ddd28795673a56b468269) chore: resolve todos around 0.11 type definition changes
   - [b963ce8f6](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/b963ce8f68e01099d5b845b42a59d9b36bcb9fdd) chore: add ability to test plugin with lines rather than requiring files, remove most of the file based tests
 
 * nvim@schema-store.nvim
