chore: sync mirrors

--- a/changelog/2025-03-28.md
+++ b/changelog/2025-03-28.md
@@ -1,6 +1,11 @@
 ## 2025-03-28
 
 * nvim@avante.nvim
+  - [d698dbe17](https://github.com/yetone/avante.nvim/commit/d698dbe17ad94a0efde2355266e5afacb3851163) fix: badcase in gpt-4o (#1757)
+  - [2cd6d9364](https://github.com/yetone/avante.nvim/commit/2cd6d93640ac779bbd0ec51f594cf38b242a9f5d) chores(docs): update sponsor logo (#1756)
+  - [1dca83e57](https://github.com/yetone/avante.nvim/commit/1dca83e578d50979813760fd397cadaea47d5b64) feat(docs): add sponsors (#1755)
+  - [78d6c389b](https://github.com/yetone/avante.nvim/commit/78d6c389b4f94b2040c87c82558ea6cd9328ef95) feat: add command to include all buffer files in file selector (#1748)
+  - [ae9787d71](https://github.com/yetone/avante.nvim/commit/ae9787d716fe82638f5a7611a1fd7020d3938074) feat: download release only when needed (#1751)
   - [b6000d5bb](https://github.com/yetone/avante.nvim/commit/b6000d5bbcb85e3b11177846220bfd438fc013dd) fix: selectively enable text editor tool (#1747)
   - [65d6ffa91](https://github.com/yetone/avante.nvim/commit/65d6ffa91703aaf779f4cd77d6e05ff5a1ab1dcf) fix: check if nui exists (#1746)
   - [a9b01e766](https://github.com/yetone/avante.nvim/commit/a9b01e766e90ff49690bfa8ff651f9a7e80f7d7b) chores: use stopinsert (#1745)
@@ -30,8 +35,10 @@
   - [84ab877b3](https://github.com/neovim/nvim-lspconfig/commit/84ab877b3c5200c52b635a3c260da7567528b7d4) fix(golangci-lint): disable stats in json output (#3665)
 
 * nvim@nvim-treesitter
+  - [a3315b8c7](https://github.com/nvim-treesitter/nvim-treesitter/commit/a3315b8c7f0f1ddaa30b24bcc0af0d31024dfb6a) bot(lockfile): update angular, koto, superhtml
   - [da5825bf7](https://github.com/nvim-treesitter/nvim-treesitter/commit/da5825bf70cc2ea7eacd1e60c32c07baf19adeba) bot(lockfile): update angular, hcl, koto, meson, perl, superhtml, tact, terraform, vhs
 
 * nvim@render-markdown.nvim
+  - [e6c808169](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/e6c8081691881fd63b4d72cb472094ac190ac56e) fix: support for code border for 0.11, disable conceal_lines highlights
   - [5dcadc76a](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/5dcadc76aca61156ff5156cd2d0339e5fbe741c3) chore: remove end_row & end_col for inline or eol virtual text
   - [4964586a0](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/4964586a0c58127aef1fba8336520fe042255353) chore: move marks container out of list module, store offset as a class
