--- a/changelog/2025-04-01.md
+++ b/changelog/2025-04-01.md
@@ -12,10 +12,23 @@
   - [46073c0ef](https://github.com/yetone/avante.nvim/commit/46073c0efd96b5cf83697ef7e43e2189380f713f) feat: aihubmix (#1780)
   - [cda98593f](https://github.com/yetone/avante.nvim/commit/cda98593f96bd25534e88ec9862636d69c442263) feat: auto write (#1779)
 
+* nvim@cmp-buffer
+  - [51f42e6ef](https://github.com/hrsh7th/cmp-buffer/commit/51f42e6ef64e6ec6601f640731a94c524f165d7c) don't use deprecated functions
+
+* nvim@cmp-nvim-lsp
+  - [99c4e3ea2](https://github.com/hrsh7th/cmp-nvim-lsp/commit/99c4e3ea26262dbe457d8fd57b1136ede6157531) don't use deprecated functions
+
+* nvim@cmp-path
+  - [853aefbca](https://github.com/hrsh7th/cmp-path/commit/853aefbca4edd58d21a6b4171a4f76a85ae01666) don't use deprecated functions
+
+* nvim@nvim-cmp
+  - [c4c784a62](https://github.com/hrsh7th/nvim-cmp/commit/c4c784a6214f1906229c4477812a4a0fe90342ca) don't use deprecated functions
+
 * nvim@nvim-treesitter
   - [9be6836eb](https://github.com/nvim-treesitter/nvim-treesitter/commit/9be6836ebeb88a536055bf1ce0961eef68da4bc6) bot(lockfile): update editorconfig, elm, tcl
 
 * nvim@render-markdown.nvim
+  - [92256e02d](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/92256e02db70c474f97fc461b6b6bc4aff7a499a) chore: document limitation with column features and block widths
   - [bfbb46af4](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/bfbb46af43c95115a06419ef290e16e2fa2a1941) chore(release): 8.2.0
   - [17b839bba](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/17b839bba4c5c0c791fec0f7015c7d0e4eac30b8) feat: reduce height of LSP hover doc window based on concealed lines
   - [a6a982d55](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/a6a982d55cc61772a569e33da35780d0e136a7df) chore(refactor): width calculations & version updates
