chore: sync mirrors

--- a/changelog/2025-04-02.md
+++ b/changelog/2025-04-02.md
@@ -1,6 +1,7 @@
 ## 2025-04-02
 
 * nvim@avante.nvim
+  - [0828d3234](https://github.com/yetone/avante.nvim/commit/0828d3234656baf4d5bba69df9a801eeafa30c35) fix: AvanteEdit command (#1799)
   - [06757e8bf](https://github.com/yetone/avante.nvim/commit/06757e8bf57175da45180a26840c5db1f38cb4d9) fix: dispatch agent missing tool histories (#1794)
 
 * nvim@cmp-buffer
@@ -39,9 +40,20 @@
   - [059e89495](https://github.com/hrsh7th/nvim-cmp/commit/059e89495b3ec09395262f16b1ad441a38081d04) fix: ref-fix backward compatibility
   - [3fce8d970](https://github.com/hrsh7th/nvim-cmp/commit/3fce8d97007a08df9f3f816300247b148827cf43) improve backward compatibility
 
+* nvim@nvim-lspconfig
+  - [cd8e5d753](https://github.com/neovim/nvim-lspconfig/commit/cd8e5d75332485c59c01399a924f079d41f66b40) docs: update configs.md skip-checks: true
+  - [f12636fe2](https://github.com/neovim/nvim-lspconfig/commit/f12636fe2da447f59c341d4596680b3ddd59e1b5) fix(sourcekit): url & dynamic registration for `didChangeWatchedFiles` (#3681)
+
 * nvim@nvim-treesitter
+  - [30654ee72](https://github.com/nvim-treesitter/nvim-treesitter/commit/30654ee72a69e7c76a54b66d748dae088429e863) ci(tests): run tests on v0.10.4
+  - [36a7d010b](https://github.com/nvim-treesitter/nvim-treesitter/commit/36a7d010bb3eb7f3e74d091e4584040a00dd50de) ci(update): only check once a week (sat)
+  - [79a6192d4](https://github.com/nvim-treesitter/nvim-treesitter/commit/79a6192d4782e6d398e0b2ce588cdf9f27c5b9f5) ci(update): block dhall,elm,enforce,rust (ABI 15)
+  - [69cb3aafb](https://github.com/nvim-treesitter/nvim-treesitter/commit/69cb3aafb6a32c4cc3c0b800ef1b6b52d84d1c17) fix(rust,dhall,elm,enforce): revert to ABI 14 parser
+  - [cfbbea187](https://github.com/nvim-treesitter/nvim-treesitter/commit/cfbbea187b899b6f75503d3d635ee9374a44818d) ci(tests): check queries on 0.10.4
+  - [288b4fb4d](https://github.com/nvim-treesitter/nvim-treesitter/commit/288b4fb4d7d4203063923c35823c828eb8a35869) bot(lockfile): update erlang, glimmer_javascript, glimmer_typescript, php, php_only, qmljs, rust
   - [4b390e1e4](https://github.com/nvim-treesitter/nvim-treesitter/commit/4b390e1e46ca2e6220f14641cb840bbf9ad5446f) bot(lockfile): update fortran, scala, tcl
 
 * nvim@render-markdown.nvim
+  - [c283dec1e](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/c283dec1ea94947499c36bb17443e15d6acf5cda) feat: check disable_pattern exists and notify if not
   - [6b66c3236](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/6b66c32364cd3e6101d37fd71ba4c6fbb2eddfda) chore: add virt_lines as another limitation with colorcolumn
   - [1e2e9a386](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/1e2e9a386fbe41b869d3d0e000e19db72284585b) feat: wrap nvim_buf_set_extmark in pcall use notify_once if it errors
