chore: sync mirrors

--- a/changelog/2025-04-03.md
+++ b/changelog/2025-04-03.md
@@ -3,6 +3,13 @@
 * nvim@avante.nvim
   - [89a86f0fc](https://github.com/yetone/avante.nvim/commit/89a86f0fc197ec9ffb3663a499432f8df4e4b1e5) fix: search engine did not return correctly (#1801)
 
+* nvim@nvim-lint
+  - [81e8ba765](https://github.com/mfussenegger/nvim-lint/commit/81e8ba7655cc4395b1092ef4e1b6e83f54cd54ad) Extend util.wrap to support filtering diagnostics
+  - [15370e794](https://github.com/mfussenegger/nvim-lint/commit/15370e794f1fe7262a44f879b7f84de661054062) tflint: match path when .tf file is not in current dir (#755)
+  - [7d5d56a37](https://github.com/mfussenegger/nvim-lint/commit/7d5d56a37fb30164f1154bb821f26f91d8755034) Add support for golangci-lint v2 (#761)
+  - [810f2f066](https://github.com/mfussenegger/nvim-lint/commit/810f2f06611677c965e54636a27fd176a795a4d2) Add config for vim-projectionist (#763)
+  - [a645e7c81](https://github.com/mfussenegger/nvim-lint/commit/a645e7c81949e44e3bd67a1f9cf6778d77946966) Add support for fortitude (#767)
+
 * nvim@nvim-lspconfig
   - [40f120c10](https://github.com/neovim/nvim-lspconfig/commit/40f120c10ea4b87311175539a183c3b75eab95a3) docs: update configs.md skip-checks: true
   - [c47fffd96](https://github.com/neovim/nvim-lspconfig/commit/c47fffd9660c482a80e6f1b9909ecebfc058203e) fix(tblgen): find tablegen_compile_commands.yml #3649
@@ -12,3 +19,10 @@
   - [171b6df1a](https://github.com/neovim/nvim-lspconfig/commit/171b6df1ad1bb3ee7ef115191ae5e473004b2872) fix(docgen): :help (vimdoc) format #3683
   - [9479cc274](https://github.com/neovim/nvim-lspconfig/commit/9479cc2740351e36392fb82f3cf86b1a93e2b8ed) docs: update configs.md skip-checks: true
   - [d1256cba5](https://github.com/neovim/nvim-lspconfig/commit/d1256cba526466022e8d5b962d00c2918882d921) fix(docgen): generate configs.txt in :help (vimdoc) format #3675
+
+* nvim@nvim-treesitter
+  - [997288c55](https://github.com/nvim-treesitter/nvim-treesitter/commit/997288c55253e27f782d991099490f80205d65bf) fix(python): highlight all types of docstrings (#7788)
+
+* nvim@render-markdown.nvim
+  - [d2285137f](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/d2285137fa4fbc0b4152cb444008166962b727b5) chore: update changelog
+  - [b292624f2](https://github.com/MeanderingProgrammer/render-markdown.nvim/commit/b292624f228596010145f63697a49cdd9b8d8ce7) feat: padding character for inline code
