chore: sync mirrors

--- a/changelog/2025-04-07.md
+++ b/changelog/2025-04-07.md
@@ -1,8 +1,18 @@
 ## 2025-04-07
 
+* nvim@avante.nvim
+  - [1c36cfc81](https://github.com/yetone/avante.nvim/commit/1c36cfc8120681ffe3261cba83f00338630da606) fix: enhance web search functionality with proxy support (#1823)
+  - [40ffc0f5f](https://github.com/yetone/avante.nvim/commit/40ffc0f5faf51fd635d21fc28660bf418089226a) Use `vim.hl` if available (#1809)
+  - [f83378a67](https://github.com/yetone/avante.nvim/commit/f83378a67e975453d5479cc72bbeb87ad1f8e443) feat: add pre-commit ci (#1824)
+  - [1e2e233ff](https://github.com/yetone/avante.nvim/commit/1e2e233ff5a1ff92ede4d2631746f66889424faa) fix max_tokens for reasoning models (#1819)
+
 * nvim@conform.nvim
   - [eebc724d1](https://github.com/stevearc/conform.nvim/commit/eebc724d12c5579d733d1f801386e0ceb909d001) [docgen] Update docs skip-checks: true
   - [74b8332fe](https://github.com/stevearc/conform.nvim/commit/74b8332feff2cc18299b6cdf54f256b492637f4e) feat: add support for mago (#684)
+
+* nvim@copilot-chat.nvim
+  - [16f041ecc](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/16f041ecc954975416b1e33f8ca2e1df2b86a625) chore(doc): auto generate docs
+  - [3228edc02](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/3228edc02014c7240ff122aa4a94a4dff1215be1) refactor: do not require chat on plugin load
 
 * nvim@copilot.lua
   - [d92ef312b](https://github.com/zbirenbaum/copilot.lua/commit/d92ef312b853f5a8b219683f01c95ae86749da7f) chore: add .gitignore for logs and env.lua
@@ -15,7 +25,10 @@
   - [2cd99fbca](https://github.com/zbirenbaum/copilot.lua/commit/2cd99fbca30a9bbcd4ea67f885386c45be3b9e00) tests: initial round of tests using mini.test
   - [784f4ebf7](https://github.com/zbirenbaum/copilot.lua/commit/784f4ebf7208a0f26016883ed70ee456ce90638b) Merge branch 'master' into dev
   - [228cd7456](https://github.com/zbirenbaum/copilot.lua/commit/228cd7456fd923b8da3eb6497bb345de58b93637) doc: add auth_provider_url setting to readme (#429)
+  - [5a8fdd34b](https://github.com/zbirenbaum/copilot.lua/commit/5a8fdd34bb67eadc3f69e46870db0bed0cc9841c) feat: update to Copilot LSP v1.296 (#427)
   - [56621aff7](https://github.com/zbirenbaum/copilot.lua/commit/56621aff787f78593cd2397234ec466a2d500ba0) Merge branch 'master' into dev
+  - [13ae71875](https://github.com/zbirenbaum/copilot.lua/commit/13ae71875457d25b92cb13cb43aae5a43972dd36) feat: update to latest Copilot LSP (#426)
+  - [e6c341af0](https://github.com/zbirenbaum/copilot.lua/commit/e6c341af013a1fe9cf9d0faf00f2a4a49b46c4a0) fix: proxy_uri and provider_url configurations not being passed along
   - [200018604](https://github.com/zbirenbaum/copilot.lua/commit/200018604dcfc5a5c6dde4f7c2a7863d4138a823) feat: add validation of configuration
   - [d93f32b7b](https://github.com/zbirenbaum/copilot.lua/commit/d93f32b7b85d1f102288f15d22bc9703e0e9b065) refactor: split out files further
   - [397a38de0](https://github.com/zbirenbaum/copilot.lua/commit/397a38de0e8c4169854d969af7b1f67f6d65f014) refactor: extract filetype-related utils
