chore: sync mirrors

--- a/changelog/2025-04-10.md
+++ b/changelog/2025-04-10.md
@@ -1,6 +1,7 @@
 ## 2025-04-10
 
 * nvim@avante.nvim
+  - [7e31317fb](https://github.com/yetone/avante.nvim/commit/7e31317fbc3061c7fea586b598b0a9865423b976) fix(lint): make neovim 0.11 typecheck happy (#1844)
   - [04336913b](https://github.com/yetone/avante.nvim/commit/04336913b32f66f45b20a6ba2f033dd742f04374) Revert "fix max_tokens for reasoning models (#1819)" (#1839)
   - [1fc57ab1a](https://github.com/yetone/avante.nvim/commit/1fc57ab1aed2089e11b187cf88b40f600ab17db8) feat: add support for searxng (#1814)
   - [d5210f4af](https://github.com/yetone/avante.nvim/commit/d5210f4afbe971024382f35f652fc0c4031e8468) fix: ask floating window border (#1837)
@@ -9,6 +10,10 @@
   - [a89f5f116](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/a89f5f1162b04a0962e5f4c3cdf248a81e7e53cb) chore(main): release 3.11.0 (#1102)
   - [bc8d12014](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/bc8d12014fd4da1426093588d1b98654221a9cc5) chore(doc): auto generate docs
   - [381d5cddd](https://github.com/CopilotC-Nvim/CopilotChat.nvim/commit/381d5cddd25abec595c3c611e96cae2ba61d7ea5) fix: set default model to gpt-4o again
+
+* nvim@copilot.lua
+  - [2378a40e9](https://github.com/zbirenbaum/copilot.lua/commit/2378a40e9cecbf3720b6f4f3d5d6b6d8994bd321) chore: bump Copilot LSP version to 1.300
+  - [2abb68f0c](https://github.com/zbirenbaum/copilot.lua/commit/2abb68f0cbc5d836b0aa39e10ccb9efbc2531011) feat: update to latest Copilot LSP
 
 * nvim@neo-tree.nvim
   - [5224467c6](https://github.com/nvim-neo-tree/neo-tree.nvim/commit/5224467c6a49a6c77b8a8333f4d9af0abc788e10) build: slim down Dockerfile (#1752)
